Update tox with new requirements
Change requirements file naming to be
similar to the requirements-direct.txt name
and update tox.ini with the new name

--- a/tox.ini
+++ b/tox.ini
@@ -3,8 +3,8 @@ envlist = py35
 
 [testenv]
 deps=
-  -rrequirements.txt
-  -rtestrequirements.txt
+  -rrequirements-direct.txt
+  -rrequirements-test.txt
 setenv=
   PYTHONWARNING=all
 commands=
